--- a/resume/index.html
+++ b/resume/index.html
@@ -18,7 +18,6 @@
 <img src ="vaidya.jpg" width="300px">
 
 
-
 <ul>
   <li><a href ="mailto:nhayav20@gmail.com"> Email Me </a> </li>
   <li> <a href = www.linkedin.com/in/nhaya-vaidya> LinkedIn </a> </li>
@@ -46,7 +45,6 @@
 <p>I co-founded this club at UMD with the president. I plan and organize the meetings and manage our emails. I co-run our social media accounts.</p>
 
 
-
 <h3>Teaching Assistant</h3>
 <h4>University of Maryland College Park</h4>
 <h5>September 2019 — December 2019</h5>
@@ -56,19 +54,19 @@
 <h3>Optometrist Assistant</h3>
 <h4>ForEyes Optical </h4>
 <h5>August 2018 – June 2019</h5>
-<p> </p>
+<p>I check patients in and out of the office. I run phones and file patients charts and insurances. I pretest patients. </p>
 
 
 
 <h3>Writer</h3>
 <h4>The JagWire</h4>
 <h5>September 2016 – May 2018</h5>
-<p></p>
+<p>I write stories for my high school newspaper. I would write about one a week depending on the assignment. I use AP Style in my stories.</p>
 
 <h3>Writer and Editor </h3>
 <h4>Northwest High School Yearbook</h4>
 <h5>September 2016 – May 2018</h5>
-<p></p>
+<p>I write spreads for the yearbook. I edited and created spreads. I also took photos for the yearbook. I help come up with ideas for future yearbooks and spreads. </p>
 
 
 
@@ -82,10 +80,14 @@
 
 <h2>Skills:</h2>
 <ul>
-  <li></li>
+  <li>Copy Editing and Fact Checking. Copy Editor. Follows AP Style.</li>
+  <li>Journalism. Student Journalist and working for a publication. Abides by SPJ Code of Ethics.</li>
+  <li>Photo Editing with Adobe Photoshop and Bridge.</li>
+  <li>Teaching. Experience as a TA and creating lesson plans. </li>
+  <li>Data analysis. Has experience with R and R Studio to compile data and learn trends from data. Can create graphs and plots with R Studio with data. </li>
+  <li>Photography. Understands how to use a DSLR Camera and create stories with photos.</li>
+  <li>German. Can understand and speak basic German. </li>
 </ul>
-
-
 
 
 </html>
