update to resume

--- a/resume/index.html
+++ b/resume/index.html
@@ -15,7 +15,7 @@
 <h1> Nhaya Vaidya </h1>
 <strong> Student </strong><br>
 
-<img src ="vaidya.jpg" width="300px">
+<img src ="resumephoto.jpg" width="300px">
 
 
 <ul>
