--- a/resume/index.html
+++ b/resume/index.html
@@ -4,6 +4,7 @@
 
 <head>
   <title> Nhaya Vaidya's Resume </title>
+  <link href="style.css" type="text/css" rel="stylesheet">
 </head>
 
 
@@ -12,7 +13,7 @@
 </body>
 <!-- I built this myself-->
 
-<h1> Nhaya Vaidya </h1>
+<h1 style="color: #33485e; font-size: 36px;"> Nhaya Vaidya </h1>
 <strong> Student </strong><br>
 
 <img src ="resumephoto.jpg" width="300px">
