--- a/resume/index.html
+++ b/resume/index.html
@@ -16,7 +16,7 @@
 <h1 style="color: #33485e; font-size: 36px;"> Nhaya Vaidya </h1>
 <strong> Student </strong><br>
 
-<img src ="resumephoto.jpg" width="300px">
+<img src ="resumephoto.JPG" width="300px">
 
 
 <ul>
