--- a/resume/index.html
+++ b/resume/index.html
@@ -5,6 +5,7 @@
 <head>
   <title> Nhaya Vaidya's Resume </title>
   <link href="style.css" type="text/css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 
 
@@ -13,11 +14,12 @@
 </body>
 <!-- I built this myself-->
 
-<h1 style="color: #33485e; font-size: 36px;"> Nhaya Vaidya </h1>
-<strong> Student </strong><br>
+<h1> Nhaya Vaidya </h1>
+<strong> Student & Journalist </strong><br>
 
+<!--
 <img src ="resumephoto.JPG" width="300px">
-
+-->
 
 <ul>
   <li><a href ="mailto:nhayav20@gmail.com"> Email Me </a> </li>
