update resume css

--- a/resume/index.html
+++ b/resume/index.html
@@ -11,78 +11,78 @@
 
 <body>
 
-</body>
 <!-- I built this myself-->
 
-<h1> Nhaya Vaidya </h1>
-<strong> Student & Journalist </strong><br>
+<div id="container">
+<div id="name"> Nhaya Vaidya </div>
+<strong> Student & Journalist </strong>
 
 <!--
 <img src ="resumephoto.JPG" width="300px">
 -->
 
-<ul>
+<ul class="menu">
   <li><a href ="mailto:nhayav20@gmail.com"> Email Me </a> </li>
   <li> <a href = www.linkedin.com/in/nhaya-vaidya> LinkedIn </a> </li>
   <li><a href = https://twitter.com/NhayaVaidya> Twitter</a></li>
   <li><a href = https://github.com/nhayav> GitHub</a> </li>
 </ul>
 
-<p>I am a student at the University of Maryland College Park, perusing a double degree in Government and Politics International Relations and Journalism Multi-Platform with a minor in German. I am also a copy editor for the campus magazine Unwind and a student journalist. </p>
+<p class="description">I am a student at the University of Maryland College Park, perusing a double degree in Government and Politics International Relations and Journalism Multi-Platform with a minor in German. I am also a copy editor for the campus magazine Unwind and a student journalist. </p>
 
-<h2>Experience:</h2>
-<h3>Copy Editor</h3>
-<h4>Unwind Magazine</h4>
-<h5>February 2020 – present</h5>
-<p>I edit two to three stories a month during the semester for the student run magazines publication. I fact check each story to make sure that no false information is being published. I worked with the copy chief, section editors, and reporters to make sure the story facts were correct and to ensure the story was getting out on time. I used AP style when editing the stories. </p>
+<div class="sectionheader">Experience:</div>
+<div class="jobtitle">Copy Editor</div>
+<div class="organization">Unwind Magazine</div>
+<div class="date">February 2020 – present</div>
+<p class="description">I edit two to three stories a month during the semester for the student run magazines publication. I fact check each story to make sure that no false information is being published. I worked with the copy chief, section editors, and reporters to make sure the story facts were correct and to ensure the story was getting out on time. I used AP style when editing the stories. </p>
 
-<h3>Vice President of Administrative Affairs </h3>
-<h4>Office of Multi-Ethnic Student Education Academic Excellency Society (OAES)</h4>
-<h5>September 2019 – present</h5>
-<p>As the Vice President of Administrative Affairs, I help run and plan the General Body Meetings (GBMs) and the Executive Board Meetings (EBMs). I send out announcements and reminders to the members of the society to ensure they are on task for completing their requirements. I track their completed requirements to ensure their membership is active. I take minutes at the EBMs and co-plan our GBMs and other events. I take photos and create visuals at our GBMs.</p>
-
-
-<h3>Vice President</h3>
-<h4>ERS Club</h4>
-<h5>September 2019 – present</h5>
-<p>I co-founded this club at UMD with the president. I plan and organize the meetings and manage our emails. I co-run our social media accounts.</p>
+<div class="jobtitle">Vice President of Administrative Affairs </div>
+<div class="organization">Office of Multi-Ethnic Student Education Academic Excellency Society (OAES)</div>
+<div class="date">September 2019 – present</div>
+<p class="description">As the Vice President of Administrative Affairs, I help run and plan the General Body Meetings (GBMs) and the Executive Board Meetings (EBMs). I send out announcements and reminders to the members of the society to ensure they are on task for completing their requirements. I track their completed requirements to ensure their membership is active. I take minutes at the EBMs and co-plan our GBMs and other events. I take photos and create visuals at our GBMs.</p>
 
 
-<h3>Teaching Assistant</h3>
-<h4>University of Maryland College Park</h4>
-<h5>September 2019 — December 2019</h5>
-<p>I taught and created lesson plans for the students of English 101. I graded and reviewed students’ papers and other assignments. I held office hours and offered feedback to students. I worked with the professor and my fellow TA to come up with ideas to help the students succeed in the class and ideas that would carry on into following semesters.</p>
+<div class="jobtitle">Vice President</div>
+<div class="organization">ERS Club</div>
+<div class="date">September 2019 – present</div>
+<p class="description">I co-founded this club at UMD with the president. I plan and organize the meetings and manage our emails. I co-run our social media accounts.</p>
 
 
-<h3>Optometrist Assistant</h3>
-<h4>ForEyes Optical </h4>
-<h5>August 2018 – June 2019</h5>
-<p>I check patients in and out of the office. I run phones and file patients charts and insurances. I pretest patients. </p>
+<div class="jobtitle">Teaching Assistant</div>
+<div class="organization">University of Maryland College Park</div>
+<div class="date">September 2019 — December 2019</div>
+<p class="description">I taught and created lesson plans for the students of English 101. I graded and reviewed students’ papers and other assignments. I held office hours and offered feedback to students. I worked with the professor and my fellow TA to come up with ideas to help the students succeed in the class and ideas that would carry on into following semesters.</p>
 
 
-
-<h3>Writer</h3>
-<h4>The JagWire</h4>
-<h5>September 2016 – May 2018</h5>
-<p>I write stories for my high school newspaper. I would write about one a week depending on the assignment. I use AP Style in my stories.</p>
-
-<h3>Writer and Editor </h3>
-<h4>Northwest High School Yearbook</h4>
-<h5>September 2016 – May 2018</h5>
-<p>I write spreads for the yearbook. I edited and created spreads. I also took photos for the yearbook. I help come up with ideas for future yearbooks and spreads. </p>
+<div class="jobtitle">Optometrist Assistant</div>
+<div class="organization">ForEyes Optical </div>
+<div class="date">August 2018 – June 2019</div>
+<p class="description">I check patients in and out of the office. I run phones and file patients charts and insurances. I pretest patients. </p>
 
 
 
-<h2>Education:</h2>
-<ul>
+<div class="jobtitle">Writer</div>
+<div class="organization">The JagWire</div>
+<div class="date">September 2016 – May 2018</div>
+<p class="description">I write stories for my high school newspaper. I would write about one a week depending on the assignment. I use AP Style in my stories.</p>
+
+<div class="jobtitle">Writer and Editor </div>
+<div class="organization">Northwest High School Yearbook</div>
+<div class="date">September 2016 – May 2018</div>
+<p class="description">I write spreads for the yearbook. I edited and created spreads. I also took photos for the yearbook. I help come up with ideas for future yearbooks and spreads. </p>
+
+
+
+<div class="sectionheader">Education:</div>
+<ul id="degrees">
   <li>Bachelor of Arts, Government and Politics International Relations, Journalism Multi-Platform, University of Maryland College Park, 2022 </li>
  <li>Minor in German, University of Maryland College Park, 2022</li>
 </ul>
 
 
 
-<h2>Skills:</h2>
-<ul>
+<div class="sectionheader">Skills:</div>
+<ul id="do">
   <li>Copy Editing and Fact Checking. Copy Editor. Follows AP Style.</li>
   <li>Journalism. Student Journalist and working for a publication. Abides by SPJ Code of Ethics.</li>
   <li>Photo Editing with Adobe Photoshop and Bridge.</li>
@@ -92,5 +92,6 @@
   <li>German. Can understand and speak basic German. </li>
 </ul>
 
-
+</div>
+</body>
 </html>
