--- a/resume/index.html
+++ b/resume/index.html
@@ -15,20 +15,22 @@
 
 <div id="container">
 <div id="name"> Nhaya Vaidya </div>
-<strong> Student & Journalist </strong>
+
 
 <!--
 <img src ="resumephoto.JPG" width="300px">
 -->
 
-<ul class="menu">
-  <li><a href ="mailto:nhayav20@gmail.com"> Email Me </a> </li>
-  <li> <a href = www.linkedin.com/in/nhaya-vaidya> LinkedIn </a> </li>
-  <li><a href = https://twitter.com/NhayaVaidya> Twitter</a></li>
-  <li><a href = https://github.com/nhayav> GitHub</a> </li>
+<ul>
+  <li  class="menu"><a href ="mailto:nhayav20@gmail.com"> Email Me </a> </li>
+  <li  class="menu"> <a href = www.linkedin.com/in/nhaya-vaidya> LinkedIn </a> </li>
+  <li  class="menu"><a href = https://twitter.com/NhayaVaidya> Twitter</a></li>
+  <li  class="menu"><a href = https://github.com/nhayav> GitHub</a> </li>
 </ul>
 
-<p class="description">I am a student at the University of Maryland College Park, perusing a double degree in Government and Politics International Relations and Journalism Multi-Platform with a minor in German. I am also a copy editor for the campus magazine Unwind and a student journalist. </p>
+<div id="title"> Student & Journalist </div>
+
+<p class="top">I am a student at the University of Maryland College Park, perusing a double degree in Government and Politics International Relations and Journalism Multi-Platform with a minor in German. I am also a copy editor for the campus magazine Unwind and a student journalist. </p>
 
 <div class="sectionheader">Experience:</div>
 <div class="jobtitle">Copy Editor</div>
