--- a/resume/index.html
+++ b/resume/index.html
@@ -21,11 +21,11 @@
 <img src ="resumephoto.JPG" width="300px">
 -->
 
-<ul>
-  <li  class="menu"><a href ="mailto:nhayav20@gmail.com"> Email Me </a> </li>
-  <li  class="menu"> <a href = www.linkedin.com/in/nhaya-vaidya> LinkedIn </a> </li>
-  <li  class="menu"><a href = https://twitter.com/NhayaVaidya> Twitter</a></li>
-  <li  class="menu"><a href = https://github.com/nhayav> GitHub</a> </li>
+<ul class="menu">
+  <li  ><a href ="mailto:nhayav20@gmail.com"> Email Me </a> </li>
+  <li  > <a href = www.linkedin.com/in/nhaya-vaidya> LinkedIn </a> </li>
+  <li  ><a href = https://twitter.com/NhayaVaidya> Twitter</a></li>
+  <li><a href = https://github.com/nhayav> GitHub</a> </li>
 </ul>
 
 <div id="title"> Student & Journalist </div>
