--- a/vaidyalayout/index.html
+++ b/vaidyalayout/index.html
@@ -88,7 +88,7 @@ width="900" height="80" class="banner">
 
     <p>“We hope they don’t do it very much,” he said, “but the reality of it is that there is some of that. That’s always going to happen . . . really at any level of athletes. So you just do your best . . . to try to make sure they’re always prepared every day.” </p>
 
-    <p><strong>Read More<strong></p>
+    <p><strong>Read More</strong></p>
     <p><a href = https://www.cbssports.com/nfl/news/redskins-ryan-anderson-takes-physical-play-to-another-level-with-reported-comment-to-teammate/>Redskins' Ryan Anderson takes physical play to another level with reported comment to teammate</a></p>
     <p><a href = https://time.com/5856534/washington-post-redskins-name-change/>Washington 'Post' Demands Redskins' Owner Change Team Name</a></p>
     <p><a href = https://www.espn.com/nfl/team/_/name/wsh/washington-redskins> Washington Redskins</a></p>
