--- a/bootstrap-template.html
+++ b/bootstrap-template.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 <!--CSS Style-->
-<link href="final-resume/style.css" type="text/css" rel="stylesheet">
+<link href="resume/stylesheet.css" type="text/css" rel="stylesheet">
 
 <!--Google Font-->
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
@@ -22,16 +22,16 @@
 
 <body>
    <!-- Start Bootstrap NAV-->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-custom navbar-expand-lg fixed-top">
    <a class="navbar-brand" href="#">Nhaya Vaidya's Resume</a>
-   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+   <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
      <span class="navbar-toggler-icon"></span>
    </button>
 
    <div class="collapse navbar-collapse" id="navbarSupportedContent">
      <ul class="navbar-nav mr-auto">
        <li class="nav-item active">
-         <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
+         <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
        </li>
        <li class="nav-item">
          <a class="nav-link" href="#">Experience</a>
@@ -48,10 +48,8 @@
        <li class="nav-item">
          <a class="nav-link" href="#">Awards</a>
        </li>
-       <li class="nav-item">
-         <a class="nav-link" href="#">Other</a>
-       </li>
-       <!--
+
+<!--
        <li class="nav-item dropdown">
          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
            Dropdown
@@ -61,31 +59,26 @@
            <a class="dropdown-item" href="#">Another action</a>
            <div class="dropdown-divider"></div>
            <a class="dropdown-item" href="#">Something else here</a>
-         </div>
-       </li>
+         </div> -->
+    <!--   </li>
        <li class="nav-item">
          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
        </li> -->
      </ul>
-     <form class="form-inline my-2 my-lg-0">
+    <!-- <form class="form-inline my-2 my-lg-0">
        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-     </form>
+     </form> -->
    </div>
   </nav>
    <!-- End Bootstrap nav -->
 
 
-   <img src ="final-resume/banner-for-resume.JPG" width="500px">
+
 
  <!-- Jumbotron-->
  <div class="jumbotron">
-
-  <h1 class="display-4">Hello, world!</h1>
-  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-  <hr class="my-4">
-  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-  <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+   <img src ="final-resume/resume-banner.JPG" class="center">
 </div>
 
  <!-- Grids-->
@@ -94,14 +87,14 @@
 
                  <div class="col-md-6">
                          <div class="sectionheader"><i class="fas fa-address-card"></i>          ABOUT            </div>
-                         <p>I am a student at the University of Maryland College Park, perusing a double degree in Government and Politics International Relations and Journalism Multi-Platform with a minor in German. I am a copy editor for the student run campus magazine, Unwind, and a student journalist.</p>
+                         <p>I am a student at the University of Maryland College Park, perusing a double degree in Government and Politics International Relations and Journalism Multi-Platform with a minor in German. I am also a copy editor for the student run campus magazine, Unwind, and a student journalist.</p>
                  </div>
                  <div class="col-md-6">
                          <div class="sectionheader"><i class="fas fa-pen-square"></i>          CONTACT ME</div>
-                         <div><a href ="mailto:nhayav20@gmail.com"><i class="far fa-envelope fa-2x" color="black"></i> </a>Email Me</div>
-                         <div><a href = www.linkedin.com/in/nhaya-vaidya><i class="fab fa-linkedin fa-2x"></i></a>LinkedIn</div>
-                         <div><a href = https://twitter.com/Nhayav20><i class="fab fa-twitter fa-2x"></i> </a></div>
-                         <div><a href = https://github.com/nhayav><i class="fab fa-github fa-2x"></i></a></div>
+                         <div><a class="link" href ="mailto:nhayav20@gmail.com"><i class="far fa-envelope fa-2x" color="black"></i></a>&nbsp&nbsp     Email Me
+                         <div><a class="link" href = www.linkedin.com/in/nhaya-vaidya><i class="fab fa-linkedin fa-2x"></i></a>&nbsp&nbsp&nbsp    LinkedIn </div>
+                         <div><a class="link" href = https://twitter.com/Nhayav20><i class="fab fa-twitter fa-2x"></i></a>&nbsp&nbsp  Twitter</div>
+                         <div><a class="link" href = https://github.com/nhayav><i class="fab fa-github fa-2x"></i></a>&nbsp&nbsp   GitHub</div>
 
                  </div>
 
@@ -113,40 +106,66 @@
 
 
                  <div class="col-md-12">
-                         <div class="sectionheader"><i class="fas fa-university"></i>EXPERIENCE</div>
-                         <div class="jobtitle">Copy Editor | Unwind Magazine</div>
+                         <div class="sectionheader"><i class="fas fa-university"></i>&nbsp EXPERIENCE</div>
+                         <div class="jobtitle">Copy Editor | <a class= "link2"href= "https://unwindumd.wordpress.com/">Unwind Magazine</a></div>
                          <div class="date">February 2020 – present</div>
-                         <p class="description">I edit two to three stories a month during the semester for the student run magazine using AP Style. I fact check each story. I work with the copy chief, section editors, and reporters to make sure the story facts are correct.</p>
+                         <ul class="description">
+                           <li>I edit two to three stories a month during the semester for the student run magazine using AP Style.</li>
+                           <li>I fact check each story.</li>
+                            <li>I work with the copy chief, section editors, and reporters to make sure the story facts are correct.</li>
+                            </ul>
 
-                         <div class="jobtitle">English 101 Teaching Assistant | University of Maryland College Park </div>
+                         <div class="jobtitle">English 101 Teaching Assistant | University of Maryland College Park</div>
                          <div class="date">September 2019 — December 2019</div>
-                         <p class="description">Created and taught lesson plans to the  students. Graded and reviewed students’ assignments. Worked with the professor to better help the students and came up with ideas to implement in future semesters.</p>
+                         <ul class="description">
+                           <li>Created and taught lesson plans to the  students.</li>
+                           <li>Graded and reviewed students’ assignments.</li>
+                           <li>Worked with the professor to better help the students and came up with ideas to implement in future semesters.</li>
+                         </ul>
 
                          <div class="jobtitle">Writer | The Jagwire</div>
                          <div class="date">September 2016 – May 2018</div>
-                         <p class="description">Wrote and pitched stories for my high school newspaper following AP Style.</p>
+                         <ul class="description">
+                           <li>Wrote and pitched stories for my high school newspaper following AP Style.</li>
+                         </ul>
 
                          <div class="jobtitle">Writer & Editor | Northwest High School Yearbook</div>
                          <div class="date">September 2016 – May 2018</div>
-                         <p class="description">Wrote, edited, and created spreads for the yearbook. Took photos for spreads. Pitched ideas for spreads and yearbook themes. </p>
+                         <ul class="description">
+                           <li>Wrote, edited, and created spreads for the yearbook.</li>
+                           <li>Took photos for spreads.</li>
+                           <li>Pitched ideas for spreads and yearbook themes.</li>
+                         </ul>
 
 
                  </div>
 
                  <div class="col-md-12">
                          <div class="sectionheader"><i class="fas fa-chalkboard-teacher"></i>  LEADERSHIP</div>
-                         <div class="jobtitle">Vice President of Administrative Affairs | Office of Multi-Ethnic Student Education Academic Excellency Society (OAES) </div>
+                         <div class="jobtitle">Vice President of Administrative Affairs | <a class="link2" href="https://omse.umd.edu/oaes/">Office of Multi-Ethnic Student Education Academic Excellency Society</a> </div>
                          <div class="date">September 2019 – present</div>
-                         <p class="description">Run and co-plan General Body Meetings (GBMs) and the Executive Board Meetings (EBMs). Send out announcements and reminders to members of the society. Track members requirements. Take photos at organization events. Create visuals for meetings.</p>
+                         <ul class="description">
+                           <li>Run and co-plan General Body Meetings (GBMs) and the Executive Board Meetings (EBMs).</li>
+                           <li>Send out announcements and reminders to members of the society.</li>
+                           <li>Track members requirements.</li>
+                           <li>Take photos at organization events. Create visuals for meetings.</li>
+                         </ul>
 
 
                          <div class="jobtitle">Vice President | Card Game Club</div>
                          <div class="date">September 2019 – present</div>
-                         <p class="description">Co-founder of the club. Plan and organize weekly meetings and manage emails. Co-run's social media accounts.</p>
+                         <ul class="description">
+                           <li>Co-founder of the club.</li>
+                           <li>Plan and organize weekly meetings and manage emails.</li>
+                           <li> Co-run's social media accounts.</li>
+                        </ul>
 
                          <div class="jobtitle">Secretary & Treasurer | Science National Honor Society</div>
                          <div class="date">May 2017 – June 2018</div>
-                         <p class="description">Managed new student's applications and filed paperwork. Aided science teachers with classroom organization and tutored science students</p>
+                         <ul class="description">
+                           <li>Managed new student's applications and filed paperwork.</li>
+                           <li>Aided science teachers with classroom organization and tutored science students.</li>
+                        </ul>
 
 
                  </div>
@@ -154,12 +173,12 @@
                  <div class="col-md-12">
                          <div class="sectionheader"><i class="fas fa-graduation-cap"></i>   EDUCATION</div>
                          <ul>
-                          <li>Bachelor of Arts, Government and Politics International Relations, <a href="https://umd.edu/">University of Maryland College Park</a>, 2022</li>
-                          <li>Bachelor of Arts, Journalism Multi-Platform, <a href ="https://merrill.umd.edu/">Philip Merrill College of Journalism</a>, 2022</li>
+                          <li>Bachelor of Arts, Government and Politics International Relations, <a class="link2" href="https://umd.edu/">University of Maryland College Park</a>, 2022</li>
+                          <li>Bachelor of Arts, Journalism Multi-Platform, <a class="link2" href ="https://merrill.umd.edu/">Philip Merrill College of Journalism</a>, 2022</li>
                           <li>Minor in German, University of Maryland College Park, 2022</i></li>
                           <li>GPA: 3.816</li>
                           <li>Academic Honors: Spring 2019 & Fall 2019</li>
-                          <li>Accepted into the Summer 2020 Salzburg Academy on Media and Global Change Study Abroad Program, University of Maryland College Park</li>
+                          <li>Accepted into the Summer 2020 <a class="link2" href="https://globalmaryland.umd.edu/offices/education-abroad/program/10292">Salzburg Academy on Media and Global Change Study Abroad Program</a>, University of Maryland College Park</li>
                          </ul>
                  </div>
 
@@ -167,7 +186,7 @@
                          <div class="sectionheader"> <i class="fas fa-laptop-code"></i>  SKILLS</div>
                          <ul>
                            <li><strong>Copy Editing.</strong> Follows AP Style. Works as a copy editor.</li>
-                           <li><strong>Journalism.</strong> Student Journalist working for a publication. Abides by SPJ Code of Ethics.</li>
+                           <li><strong>Journalism.</strong> Student Journalist working for a publication.Abides by <a class="link2" href="https://www.spj.org/ethicscode.asp">SPJ Code of Ethics.</a></li>
                             <li><strong>Photojournalism.</strong> Familiar with a DSLR Camera. Took a Photojournalism class. Understands how to create stories with pictures.</li>
                            <li><strong>Photo Editing.</strong> Proficient in Adobe Photoshop and Adobe Bridge.</li>
                            <li><strong>Teaching.</strong> Experience as an English TA and creating lesson plans for students.</li>
@@ -180,10 +199,10 @@
 
                  <div class="col-md-12">
 
-                         <div class="sectionheader"><i class="fas fa-award"></i>   AWARDS/HONORS</div>
+                         <div class="sectionheader"><i class="fas fa-award"></i>   AWARDS</div>
                          <div class="date">September 2019 - present</div>
                          <ul>
-                           <li>Member of the Office of Multi-Ethnic Student Education Academic Excellency Society (OAES)</li>
+                           <li>Member of the Office of Multi-Ethnic Student Education Academic Excellency Society</li>
                          </ul>
 
                          <div class="date">September 2017 - June 2018</div>
@@ -197,6 +216,7 @@
                            <li>Member of the National Honor Society</li>
                            <li>Member of the Math National Honor Society</li>
                            <li>Member of the Science National Honor Society</li>
+                           <div class="bottom"></div>
                          </ul>
 
                  </div>
