--- a/resume/nhaya-vaidya-resume.html
+++ b/resume/nhaya-vaidya-resume.html
@@ -69,7 +69,7 @@
    <!-- End Bootstrap nav -->
 
 
-<img src ="banner-for-resume.JPG" width="500px">
+<img src ="resume/banner-for-resume.JPG" width="500px">
 
  <!-- Jumbotron-->
  <div class="jumbotron">
