--- a/resume-project/nhaya-vaidya-resume.html
+++ b/resume-project/nhaya-vaidya-resume.html
@@ -5,7 +5,7 @@
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
- <title>Bootstrap Template</title>
+ <title>Nhaya Vaidya's Resume</title>
  <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
@@ -78,7 +78,7 @@
 
  <!-- Jumbotron-->
  <div class="jumbotron">
-   <img src ="resume-banner.JPG" class="center">
+   <img src ="resume-banner.jpg" class="center">
 </div>
 
  <!-- Grids-->
