--- a/resume-project/nhaya-vaidya-resume.html
+++ b/resume-project/nhaya-vaidya-resume.html
@@ -92,9 +92,9 @@
                  <div class="col-md-6">
                          <div class="sectionheader"><i class="fas fa-pen-square"></i>          CONTACT ME</div>
                          <div><a class="link" href ="mailto:nhayav20@gmail.com"><i class="far fa-envelope fa-2x" color="black"></i></a>&nbsp&nbsp     Email Me
-                         <div><a class="link" href = www.linkedin.com/in/nhaya-vaidya><i class="fab fa-linkedin fa-2x"></i></a>&nbsp&nbsp&nbsp    LinkedIn </div>
-                         <div><a class="link" href = https://twitter.com/Nhayav20><i class="fab fa-twitter fa-2x"></i></a>&nbsp&nbsp  Twitter</div>
-                         <div><a class="link" href = https://github.com/nhayav><i class="fab fa-github fa-2x"></i></a>&nbsp&nbsp   GitHub</div>
+                         <div><a class="link" target=_"new" href = www.linkedin.com/in/nhaya-vaidya><i class="fab fa-linkedin fa-2x"></i></a>&nbsp&nbsp&nbsp    LinkedIn </div>
+                         <div><a class="link" target=_"new" href = https://twitter.com/Nhayav20><i class="fab fa-twitter fa-2x"></i></a>&nbsp&nbsp  Twitter</div>
+                         <div><a class="link" target=_"new" href = https://github.com/nhayav><i class="fab fa-github fa-2x"></i></a>&nbsp&nbsp   GitHub</div>
 
                  </div>
 
@@ -107,7 +107,7 @@
 
                  <div class="col-md-12">
                          <div class="sectionheader"><i class="fas fa-university"></i>&nbsp EXPERIENCE</div>
-                         <div class="jobtitle">Copy Editor | <a class= "link2"href= "https://unwindumd.wordpress.com/">Unwind Magazine</a></div>
+                         <div class="jobtitle">Copy Editor | <a class= "link2" target=_"new" href= "https://unwindumd.wordpress.com/">Unwind Magazine</a></div>
                          <div class="date">February 2020 – present</div>
                          <ul class="description">
                            <li>I edit two to three stories a month during the semester for the student run magazine using AP Style.</li>
@@ -115,7 +115,7 @@
                             <li>I work with the copy chief, section editors, and reporters to make sure the story facts are correct.</li>
                             </ul>
 
-                         <div class="jobtitle">English 101 Teaching Assistant | University of Maryland College Park</div>
+                         <div class="jobtitle">English 101 Teaching Assistant | <a class="link2" target=_"new"href="umd.edu">University of Maryland College Park</a></div>
                          <div class="date">September 2019 — December 2019</div>
                          <ul class="description">
                            <li>Created and taught lesson plans to the  students.</li>
@@ -142,7 +142,7 @@
 
                  <div class="col-md-12">
                          <div class="sectionheader"><i class="fas fa-chalkboard-teacher"></i>  LEADERSHIP</div>
-                         <div class="jobtitle">Vice President of Administrative Affairs | <a class="link2" href="https://omse.umd.edu/oaes/">Office of Multi-Ethnic Student Education Academic Excellency Society</a> </div>
+                         <div class="jobtitle">Vice President of Administrative Affairs | <a class="link2" target=_"new" href="https://omse.umd.edu/oaes/">Office of Multi-Ethnic Student Education Academic Excellency Society</a> </div>
                          <div class="date">September 2019 – present</div>
                          <ul class="description">
                            <li>Run and co-plan General Body Meetings (GBMs) and the Executive Board Meetings (EBMs).</li>
@@ -173,12 +173,12 @@
                  <div class="col-md-12">
                          <div class="sectionheader"><i class="fas fa-graduation-cap"></i>   EDUCATION</div>
                          <ul>
-                          <li>Bachelor of Arts, Government and Politics International Relations, <a class="link2" href="https://umd.edu/">University of Maryland College Park</a>, 2022</li>
-                          <li>Bachelor of Arts, Journalism Multi-Platform, <a class="link2" href ="https://merrill.umd.edu/">Philip Merrill College of Journalism</a>, 2022</li>
-                          <li>Minor in German, University of Maryland College Park, 2022</i></li>
+                          <li>Bachelor of Arts, Government and Politics International Relations, <a class="link2" target=_"new" href="https://umd.edu/">University of Maryland College Park</a>, 2022</li>
+                          <li>Bachelor of Arts, Journalism Multi-Platform, <a class="link2" target=_"new" href ="https://merrill.umd.edu/">Philip Merrill College of Journalism</a>, 2022</li>
+                          <li>Minor in German, <a class="link2" target=_"new" href="https://sllc.umd.edu/german/undergraduate/minor">University of Maryland College Park</a>, 2022</i></li>
                           <li>GPA: 3.816</li>
                           <li>Academic Honors: Spring 2019 & Fall 2019</li>
-                          <li>Accepted into the Summer 2020 <a class="link2" href="https://globalmaryland.umd.edu/offices/education-abroad/program/10292">Salzburg Academy on Media and Global Change Study Abroad Program</a>, University of Maryland College Park</li>
+                          <li>Accepted into the Summer 2020 <a class="link2" target=_"new" href="https://globalmaryland.umd.edu/offices/education-abroad/program/10292">Salzburg Academy on Media and Global Change Study Abroad Program</a>, University of Maryland College Park</li>
                          </ul>
                  </div>
 
@@ -186,7 +186,7 @@
                          <div class="sectionheader"> <i class="fas fa-laptop-code"></i>  SKILLS</div>
                          <ul>
                            <li><strong>Copy Editing.</strong> Follows AP Style. Works as a copy editor.</li>
-                           <li><strong>Journalism.</strong> Student Journalist working for a publication.Abides by <a class="link2" href="https://www.spj.org/ethicscode.asp">SPJ Code of Ethics.</a></li>
+                           <li><strong>Journalism.</strong> Student Journalist working for a publication.Abides by <a class="link2" target=_"new" href="https://www.spj.org/ethicscode.asp">SPJ Code of Ethics.</a></li>
                             <li><strong>Photojournalism.</strong> Familiar with a DSLR Camera. Took a Photojournalism class. Understands how to create stories with pictures.</li>
                            <li><strong>Photo Editing.</strong> Proficient in Adobe Photoshop and Adobe Bridge.</li>
                            <li><strong>Teaching.</strong> Experience as an English TA and creating lesson plans for students.</li>
