--- a/resume-project/nhaya-vaidya-resume.html
+++ b/resume-project/nhaya-vaidya-resume.html
@@ -78,7 +78,7 @@
 
  <!-- Jumbotron-->
  <div class="jumbotron">
-   <img src ="resume-banner.JPG" class="center">
+   <img src ="resume-banner.jpg" class="center">
 </div>
 
  <!-- Grids-->
